[package]
name = "user_api"
version = "0.1.0"
authors = ["Brandsma <a.brandsma@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger="0.9.0"
lazy_static = "1.4.0"
actix-http = "2.2.1"
actix-web = "4.0.0-beta.9"
derive_more =  "0.99.16"
jsonwebtoken = "7.2.0"
futures = "0.3.17"
log = "0.4"
mongodb = "1.2.0"
serde = "1"
serde_json = "1"
bson = "2.0.0-beta.3"
